--- a/index.html
+++ b/index.html
@@ -559,10 +559,7 @@
                     </div>
                 </div>
                 <div class="right">
-                    Country: India🇮🇳<br>
-
-                    level: 15
-
+                    Country: India🇮🇳
                     <div class="right">
                         Skills
                         <div>
